MD Extensions: pass subpermissions through extensionsInfo

Bug: 769946
Change-Id: I9c42a190e244e1ee4144e42a687589179f544aad